[package]
name = "logfwd-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
# Keep tool/report binaries from being built implicitly during `cargo bench`.
# Those binaries are opted into explicitly via `--features bench-tools`.
autobins = false

[features]
# Enables helper/profiling binaries and their non-benchmark dependency graph.
bench-tools = ["dep:parquet"]
dhat-heap = ["dep:dhat"]
otlp-profile-alloc = []

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dependencies]
arrow = { workspace = true }
bytes = "1"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
datafusion = { workspace = true }
dhat = { version = "0.3", optional = true }
fastrand = "2"
flate2 = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-io = { version = "0.1.0", path = "../logfwd-io", features = [
    "otlp-research",
    "s3",
] }
logfwd-output = { version = "0.1.0", path = "../logfwd-output" }
logfwd-transform = { version = "0.1.0", path = "../logfwd-transform" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
memchr = "2"
pprof = { version = "0.15", features = ["flamegraph"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { workspace = true }
serde_json = "1"
stats_alloc = { workspace = true }
tempfile = "3"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Research: library evaluation candidates
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip"] }
axum = "0.8"
backon = { version = "1", features = ["tokio-sleep"] }
glob = "0.3"
globset = "0.4"
opentelemetry-proto = { version = "0.31", features = [
    "logs",
    "gen-tonic-messages",
] }
parquet = { workspace = true, optional = true }
prost = "0.14"
sonic-rs = "0.5"
zstd = "0.13"

[[bench]]
name = "json_lines"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "elasticsearch_arrow"
harness = false

[[bench]]
name = "builder_compare"
harness = false

[[bench]]
name = "output_encode"
harness = false

[[bench]]
name = "otap_proto"
harness = false

[[bench]]
name = "otlp_io"
harness = false

[[bench]]
name = "full_chain"
harness = false

[[bench]]
name = "file_io"
harness = false

[[bench]]
name = "batch_formation"
harness = false

[[bench]]
name = "throughput_ceiling"
harness = false

[[bench]]
name = "transform_overhead"
harness = false

[[bench]]
name = "s3_input"
harness = false

[[bench]]
name = "source_metadata"
harness = false

[[bench]]
name = "generator_arrow_vs_json"
harness = false

[[bin]]
name = "logfwd-bench"
path = "src/main.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "cloudtrail_profile"
path = "src/bin/cloudtrail_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "es-throughput"
path = "src/es_throughput.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "file_output_profile"
path = "src/file_output_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "framed_input_profile"
path = "src/bin/framed_input_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "generator_profile"
path = "src/bin/generator_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "http_receiver_apples"
path = "src/bin/http_receiver_apples.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "library-eval"
path = "src/library_eval.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "memory-profile"
path = "src/memory_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "otlp_e2e_profile"
path = "src/bin/otlp_e2e_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "otlp_encode_profile"
path = "src/bin/otlp_encode_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "otlp_io_profile"
path = "src/bin/otlp_io_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "source_metadata_profile"
path = "src/bin/source_metadata_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "e2e_profile"
path = "src/e2e_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "explore"
path = "src/explore.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "rss"
path = "src/rss.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "sizes"
path = "src/sizes.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "batch_size_sweep"
path = "src/bin/batch_size_sweep.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "io_worker_options"
path = "src/bin/io_worker_options.rs"
bench = false
test = false
required-features = ["bench-tools"]

[[bin]]
name = "copy_chain_profile"
path = "src/bin/copy_chain_profile.rs"
bench = false
test = false
required-features = ["bench-tools"]

[lints]
workspace = true
