[package]
name = "logfwd-competitive-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flate2 = "1"
memchr = "2"
serde = { workspace = true }
serde_json = "1"
tar = "0.4"
tiny_http = "0.12"
tempfile = "3"
ureq = { version = "3", default-features = false, features = ["rustls"] }
