[package]
name = "logfwd-competitive-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
flate2 = "1"
libc = "0.2"
memchr = "2"
serde = { workspace = true }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tiny_http = "0.12"
ureq = { version = "3", default-features = false, features = ["rustls"] }

[lints]
workspace = true
