[package]
name = "logfwd-config-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
logfwd-config = { version = "0.1.0", path = "../logfwd-config" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt to avoid downloading binaryen at build time.
# The config-validator WASM module is small and does not benefit
# meaningfully from wasm-opt, and the download is a flaky CI dep.
wasm-opt = false

[lints]
workspace = true
