[package]
name = "logfwd-config-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
js-sys = { workspace = true }
logfwd-config = { version = "0.1.0", path = "../logfwd-config" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt to avoid downloading binaryen at build time.
# The config-validator WASM module is small and does not benefit
# meaningfully from wasm-opt, and the download is a flaky CI dep.
wasm-opt = false

[lints]
workspace = true
