[package]
name = "logfwd-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[features]
default = []
otlp-research = []

[dependencies]
serde = { workspace = true }
serde_yaml_ng = "0.10"
thiserror = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
