[package]
name = "logfwd-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[features]
default = []
otlp-research = []

[dependencies]
config = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
varsubst = { workspace = true }

[lints]
workspace = true
