[package]
name = "logfwd-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
memchr = { version = "2", default-features = false }
wide = { version = "1.2.0", default-features = false }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-test-utils = { version = "0.1.0", path = "../logfwd-test-utils" }
arrow = { workspace = true }
arrow-json = { workspace = true }
bytes = "1"
chrono = { version = "0.4.44", default-features = false }
criterion = { version = "0.7", features = ["html_reports"] }
memmap2 = "0.9"
proptest = "1"
sonic-rs = "0.5"
tempfile = "3"

[[bench]]
name = "scanner"
harness = false

[lints]
workspace = true
