[package]
name = "logfwd-diagnostics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tiny_http = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
