[package]
name = "logfwd-io"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
base64 = { workspace = true }
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-otap-proto = { version = "0.1.0", path = "../logfwd-otap-proto" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
arrow = { workspace = true }
crossbeam-channel = "0.5"
globset = { workspace = true }
libc = "0.2"
memchr = "2"
notify = "8"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
opentelemetry-proto = { version = "0.31", features = ["logs", "gen-tonic-messages"] }
prost = "0.14"
serde = { workspace = true }
serde_json = "1"
sonic-rs = { workspace = true }
socket2 = { version = "0.6", features = ["all"] }
tiny_http = "0.12"
zstd = "0.13"
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64"] }
walkdir = { workspace = true }

[dev-dependencies]
dhat = "0.3"
logfwd-test-utils = { version = "0.1.0", path = "../logfwd-test-utils" }
proptest = "1"
proptest-state-machine = "0.8"
serial_test = "3"
tempfile = "3.27.0"
ureq = "3"

[lints]
workspace = true
