[package]
name = "logfwd-otap-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
prost = "0.14"

[build-dependencies]
logfwd-proto-build = { version = "0.1.0", path = "../logfwd-proto-build" }

[lints]
workspace = true
