[package]
name = "logfwd-output"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
logfwd-config = { version = "0.1.0", path = "../logfwd-config" }
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-otap-proto = { version = "0.1.0", path = "../logfwd-otap-proto" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
arrow = { workspace = true }
prost = "0.14"
itoa = "1"
ryu = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
zstd = "0.13"
serde_json = "1.0"
memchr = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "io-std", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "json", "stream"] }
httpdate = "1"
flate2 = "1"
tokio-stream = "0.1.18"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = "1"
serial_test = "3"
arrow = { workspace = true, features = ["test_utils"] }
stats_alloc = { workspace = true }
serde_json = "1.0.149"
tiny_http = "0.12"
memchr = "2"
insta = "1"
opentelemetry-proto = { version = "0.31", features = ["logs", "gen-tonic-messages"] }
mockito = "1.7.2"

[features]
elasticsearch_integration_tests = []

[lints]
workspace = true
