[package]
name = "logfwd-test-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
arrow = { workspace = true }
logfwd-output = { version = "0.1.0", path = "../logfwd-output" }
opentelemetry = { workspace = true }
proptest = "1"
tokio = { workspace = true, features = ["rt", "time", "macros"] }
tokio-util = "0.7"

[lints]
workspace = true
